[package]
name = "ch-4-restful-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"